Add swagger docs of stats module
